--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -24,3 +24,13 @@
 	height: 159px;
 	width: 209px;
 }
+
+.edna {
+	height: auto;
+	width: 350px;
+}
+.myFooter {
+	color: #FA787E;
+	background-color: rgb(51,51,51);
+	height: 30px;
+}
