--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,23 +1,6 @@
 <section data-ng-controller="HomeController">
 	<div class="jumbotron text-center whiteOnGray">
 
-		<!--<div class="row">-->
-			<!--<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">-->
-				<!--<img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/img/brand/logo.png" />-->
-			<!--</div>-->
-		<!--</div>-->
-		<!--<br>-->
-		<!--<div class="row">-->
-			<!--<p class="lead">-->
-				<!--Open-Source Full-Stack Solution For MEAN Applications-->
-			<!--</p>-->
-		<!--</div>-->
-		<!--<div class="row">-->
-			<!--<p>-->
-				<!--<a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>-->
-			<!--</p>-->
-		<!--</div>-->
-
 		<div style="height: 550px">
 			<carousel interval="myInterval">
 				<slide ng-repeat="slide in slides" active="slide.active">
@@ -25,14 +8,13 @@
 						<img class="pCarouselImg" data-ng-src="{{slide.image}}" style="margin:auto;">
 					</div>
 					<div class="carousel-caption">
-						<h4>Slide {{$index}}</h4>
-						<p>{{slide.text}}</p>
+						<!--<h4>Slide {{$index}}</h4>-->
+						<!--<p>{{slide.text}}</p>-->
 					</div>
 				</slide>
 			</carousel>
 		</div>
 
-	<!--</div>-->
 	<div>
 		<h2>Albums</h2>
 	</div>
@@ -41,9 +23,9 @@
 	<div class="row">
 			<div class="col-md-4">
 				<h2>
-					Album <strong>1</strong>
+					<strong>Places</strong>
 				</h2>
-				<p><a href="#" class="thumb"><img ng-src="modules/core/img/slider/1.jpg" class="thumb-big"></a></p>
+				<p><a href="#" class="thumb"><img ng-src="modules/albums/places/1265282_10202300476172512_195772845_o.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
@@ -62,6 +44,4 @@
 
 	</div>
 
-
-	<div class="text-center myFooter">Copyright(c) Wilson Novido <span app-version></span></div>
 </section>
