--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -69,6 +69,8 @@
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
 	{% endif %}
+
+	<div class="text-center myFooter">Web Developer: Wilson Novido <span app-version></span></div>
 </body>
 
 </html>
