--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a href="/#!/" class="navbar-brand">Edna Novido Photography</a>
+		<a href="/#!/" class="navbar-brand">VidzNovi Photography</a>
 	</div>
 
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
