--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -23,9 +23,9 @@
 	<div class="row">
 			<div class="col-md-4">
 				<h2>
-					<strong>Places</strong>
+					<strong>P</strong>laces
 				</h2>
-				<p><a href="#" class="thumb"><img ng-src="modules/albums/places/1265282_10202300476172512_195772845_o.jpg" class="thumb-big"></a></p>
+				<p><a href="/#!/pictures" class="thumb"><img ng-src="modules/albums/places/1265282_10202300476172512_195772845_o.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
