--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="HomeController">
-	<div class="jumbotron text-center whiteOnGray">
+	<div class="jumbotron text-center whiteDgray">
 
-		<div style="height: 550px">
+		<div class="whiteDgray" style="height: 550px">
 			<carousel interval="myInterval">
 				<slide ng-repeat="slide in slides" active="slide.active">
 					<div class="item pCarouselImg">
@@ -30,16 +30,16 @@
 
 			<div class="col-md-4">
 				<h2>
-					Album <strong>2</strong>
+					<strong>S</strong>till Life
 				</h2>
-				<a><a href="#" class="thumb"><img ng-src="modules/core/img/slider/2.jpg" class="thumb-big"></a></p>
+				<a><a href="#" class="thumb"><img ng-src="modules/albums/still_life/891959_10201099006096511_1969257398_o.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
 				<h2>
-					Album <strong>3</strong>
+					<strong>B</strong>&W
 				</h2>
-				<a><a href="#" class="thumb"><img ng-src="modules/core/img/slider/3.jpg" class="thumb-big"></a></p>
+				<a><a href="#" class="thumb"><img ng-src="modules/albums/B&W/1597869_10203256672556824_309545791_o.jpg" class="thumb-big"></a></p>
 			</div>
 
 	</div>
