--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -30,16 +30,16 @@
 
 			<div class="col-md-4">
 				<h2>
-					<strong>S</strong>till Life
+					<strong>F</strong>aces
 				</h2>
-				<a><a href="#" class="thumb"><img ng-src="modules/albums/still_life/891959_10201099006096511_1969257398_o.jpg" class="thumb-big"></a></p>
+				<a><a href="/#!/faces" class="thumb"><img ng-src="modules/albums/faces/DSC_4226.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
 				<h2>
 					<strong>B</strong>&W
 				</h2>
-				<a><a href="#" class="thumb"><img ng-src="modules/albums/B&W/1597869_10203256672556824_309545791_o.jpg" class="thumb-big"></a></p>
+				<a><a href="/#!/picturesb&w" class="thumb"><img ng-src="modules/albums/B&W/DSC_0464.jpg" class="thumb-big"></a></p>
 			</div>
 
 	</div>
