--- a/public/modules/core/views/picturesbw.client.view.html
+++ b/public/modules/core/views/picturesbw.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="PictureController">
     <ul>
-        <li data-ng-repeat="picture in pictures">
+        <li data-ng-repeat="picture in picturesbw">
             <img data-ng-src="{{picture.filepath}}" class="edna"><br><br>
         </li>
     </ul>
