--- a/public/modules/albums/views/aboutme.client.view.html
+++ b/public/modules/albums/views/aboutme.client.view.html
@@ -2,7 +2,7 @@
 
 	<div class="row">
 		<div class="col-md-4"><p></p>
-			<p><img ng-src="modules/core/img/edna.jpg" class="edna"></p>
+			<p><img ng-src="modules/core/img/edna.jpg" class="edna2"></p>
 		</div>
 
 		<!--<div class="col-md-4">-->
