--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -32,7 +32,7 @@
 				<h2>
 					<strong>F</strong>aces
 				</h2>
-				<a><a href="/#!/faces" class="thumb"><img ng-src="modules/albums/faces/DSC_4226.jpg" class="thumb-big"></a></p>
+				<a><a href="/#!/picturesfaces" class="thumb"><img ng-src="modules/albums/faces/DSC_4226.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
