--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -25,21 +25,21 @@
 				<h2>
 					<strong>P</strong>laces
 				</h2>
-				<p><a href="/#!/pictures" class="thumb"><img ng-src="modules/albums/places/DSC_0009.jpg" class="thumb-big"></a></p>
+				<p><a href="/#!/pictures" class="thumb"><img ng-src="modules/core/img/slider/1.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
 				<h2>
-					<strong>F</strong>aces
+					<strong>A</strong>rchitecture
 				</h2>
-				<a><a href="/#!/picturesfaces" class="thumb"><img ng-src="modules/albums/faces/DSC_4176.jpg" class="thumb-big"></a></p>
+				<a><a href="/#!/picturesfaces" class="thumb"><img ng-src="modules/core/img/slider/3.jpg" class="thumb-big"></a></p>
 			</div>
 
 			<div class="col-md-4">
 				<h2>
-					<strong>B</strong>&W
+					<strong>L</strong>andscape
 				</h2>
-				<a><a href="/#!/picturesb&w" class="thumb"><img ng-src="modules/albums/B&W/DSC_0464.jpg" class="thumb-big"></a></p>
+				<a><a href="/#!/picturesb&w" class="thumb"><img ng-src="modules/core/img/slider/5.jpg" class="thumb-big"></a></p>
 			</div>
 
 	</div>
