--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -15,32 +15,50 @@
 			</carousel>
 		</div>
 
-	<div>
-		<h2>Albums</h2>
-	</div>
+
+		<div class="row">
+			<tabset>
+				<!--<tab heading="Static title">Static content</tab>-->
+				<tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled">
 
 
-	<div class="row">
-			<div class="col-md-4">
-				<h2>
-					<strong>P</strong>laces
-				</h2>
-				<p><a href="/#!/pictures/0" class="thumb"><img ng-src="modules/core/img/slider/1.jpg" class="thumb-big"></a></p>
-			</div>
+					<div class="col-md-4" data-ng-show="tab.showFlag == 1">
+						<h2>
+							{{tab.content}}
+						</h2>
+						<p><a href="/#!/pictures/0" class="thumb"><img ng-src="modules/core/img/slider/1.jpg" class="thumb-big"></a></p>
+					</div>
+				</tab>
+				<!--<tab select="alertMe()">-->
+					<!--<tab-heading>-->
+						<!--<i class="glyphicon glyphicon-bell"></i> Alert!-->
+					<!--</tab-heading>-->
+					<!--I've got an HTML heading, and a select callback. Pretty cool!-->
+				<!--</tab>-->
 
-			<div class="col-md-4">
-				<h2>
-					<strong>A</strong>rchitecture
-				</h2>
-				<a><a href="/#!/pictures/1" class="thumb"><img ng-src="modules/core/img/slider/3.jpg" class="thumb-big"></a></p>
-			</div>
+			</tabset>
 
-			<div class="col-md-4">
-				<h2>
-					<strong>L</strong>andscape
-				</h2>
-				<a><a href="/#!/pictures/2" class="thumb"><img ng-src="modules/core/img/slider/5.jpg" class="thumb-big"></a></p>
-			</div>
+
+			<!--<div class="col-md-4">-->
+				<!--<h2>-->
+					<!--<strong>P</strong>laces-->
+				<!--</h2>-->
+				<!--<p><a href="/#!/pictures/0" class="thumb"><img ng-src="modules/core/img/slider/1.jpg" class="thumb-big"></a></p>-->
+			<!--</div>-->
+<!---->
+			<!--<div class="col-md-4">-->
+				<!--<h2>-->
+					<!--<strong>A</strong>rchitecture-->
+				<!--</h2>-->
+				<!--<a><a href="/#!/pictures/1" class="thumb"><img ng-src="modules/core/img/slider/3.jpg" class="thumb-big"></a></p>-->
+			<!--</div>-->
+<!---->
+			<!--<div class="col-md-4">-->
+				<!--<h2>-->
+					<!--<strong>L</strong>andscape-->
+				<!--</h2>-->
+				<!--<a><a href="/#!/pictures/2" class="thumb"><img ng-src="modules/core/img/slider/5.jpg" class="thumb-big"></a></p>-->
+			<!--</div>-->
 
 	</div>
 
