--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -19,16 +19,15 @@
 		<div class="row">
 			<tabset>
 				<!--<tab heading="Static title">Static content</tab>-->
-				<tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled">
-
-
-					<div class="col-md-4" data-ng-show="tab.showFlag == 1">
+				<tab ng-repeat="tab in tabs" heading="{{tab.title}}"  data-ng-show="tab.showFlag == 1" active="tab.active" disabled="tab.disabled">
+					<div class="col-md-4" data-ng-repeat="album in albums | filter:tab.tab_id">
 						<h2>
-							{{tab.content}}
+							{{album.title}}
 						</h2>
-						<p><a href="/#!/pictures/0" class="thumb"><img ng-src="modules/core/img/slider/1.jpg" class="thumb-big"></a></p>
+						<p><a href="/#!/pictures/{{album.album_id-1}}" class="thumb"><img ng-src="modules/core/img/slider/{{album.album_id}}.jpg" class="thumb-big"></a></p>
 					</div>
 				</tab>
+
 				<!--<tab select="alertMe()">-->
 					<!--<tab-heading>-->
 						<!--<i class="glyphicon glyphicon-bell"></i> Alert!-->
