--- a/public/modules/albums/views/create-album.client.view.html
+++ b/public/modules/albums/views/create-album.client.view.html
@@ -10,6 +10,18 @@
                     <div class="controls">
                         <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
                     </div>
+                    <label class="control-label" for="thumbnail">Thumbnail</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="thumbnail" id="thumbnail" class="form-control" placeholder="Thumbnail" required>
+                    </div>
+
+                    <label class="control-label" for="albumgroup">Album Group</label>
+                    <div class="controls">
+                        <select id="albumgroup" class="form-control" ng-options="company._id as company.Name for company in app.companies | orderBy:'Name'" ng-model="jobHuntInfo.company"></select>
+                    </div>
+
+
+
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-default">
