--- a/public/modules/albums/views/list-albums.client.view.html
+++ b/public/modules/albums/views/list-albums.client.view.html
@@ -11,6 +11,7 @@
 				<span data-ng-bind="album.user.displayName"></span>
 			</small>
 			<h4 class="list-group-item-heading" data-ng-bind="album.name"></h4>
+            <h4 class="list-group-item-heading" data-ng-bind="album.thumbnail"></h4>
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!albums.$resolved || albums.length">
