--- a/public/modules/albumgroups/views/create-albumgroup.client.view.html
+++ b/public/modules/albumgroups/views/create-albumgroup.client.view.html
@@ -1,6 +1,6 @@
-<section data-ng-controller="AlbumsController">
+<section data-ng-controller="AlbumgroupsController">
     <div class="page-header">
-        <h1>New Album</h1>
+        <h1>New Albumgroup</h1>
     </div>
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()" novalidate>
@@ -10,16 +10,6 @@
                     <div class="controls">
                         <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
                     </div>
-                    <label class="control-label" for="thumbnail">Thumbnail</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="thumbnail" id="thumbnail" class="form-control" placeholder="Thumbnail" required>
-                    </div>
-                    <label class="control-label" for="albumgroupid">Album Group</label>
-                    <div class="controls">
-                        <select id="albumgroupid" class="form-control" ng-options="albumgroup._id as albumgroup.name for albumgroup in albumgroups | orderBy:'name'" ng-model="albumgroupid"></select>
-                    </div>
-
-
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-default">
