--- a/public/modules/albums/views/list-albums.client.view.html
+++ b/public/modules/albums/views/list-albums.client.view.html
@@ -12,6 +12,7 @@
 			</small>
 			<h4 class="list-group-item-heading" data-ng-bind="album.name"></h4>
             <h4 class="list-group-item-heading" data-ng-bind="album.thumbnail"></h4>
+            <h4 class="list-group-item-heading" data-ng-bind="album.albumgroupid"></h4>
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!albums.$resolved || albums.length">
