--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -32,16 +32,121 @@
 
 .myFooter {
 	color: #FA787E;
-	background-color: rgb(38,38,38);
+	background-color: black;
 	height: 30px;
 }
 
 .whiteDgray {
 	color: white;
-	background-color: rgb(51,51,51);
+	background-color: rgb(32,32,32);
 }
 
-.whiteDgray {
+.whiteOnBlack {
 	color: white;
-	background-color: rgb(51,51,51);
+	background-color: black;
+}
+
+
+
+.navbar-inverse-edna {
+	background-color: black;
+	border-color: #080808;
+}
+.navbar-inverse-edna .navbar-brand {
+	color: #9d9d9d;
+}
+.navbar-inverse-edna .navbar-brand:hover,
+.navbar-inverse-edna .navbar-brand:focus {
+	color: #fff;
+	background-color: transparent;
+}
+.navbar-inverse-edna .navbar-text {
+	color: #9d9d9d;
+}
+.navbar-inverse-edna .navbar-nav > li > a {
+	color: #9d9d9d;
+}
+.navbar-inverse-edna .navbar-nav > li > a:hover,
+.navbar-inverse-edna .navbar-nav > li > a:focus {
+	color: #fff;
+	background-color: transparent;
+}
+.navbar-inverse-edna .navbar-nav > .active > a,
+.navbar-inverse-edna .navbar-nav > .active > a:hover,
+.navbar-inverse-edna .navbar-nav > .active > a:focus {
+	color: #fff;
+	background-color: #080808;
+}
+.navbar-inverse-edna .navbar-nav > .disabled > a,
+.navbar-inverse-edna .navbar-nav > .disabled > a:hover,
+.navbar-inverse-edna .navbar-nav > .disabled > a:focus {
+	color: #444;
+	background-color: transparent;
+}
+.navbar-inverse-edna .navbar-toggle {
+	border-color: #333;
+}
+.navbar-inverse-edna .navbar-toggle:hover,
+.navbar-inverse-edna .navbar-toggle:focus {
+	background-color: #333;
+}
+.navbar-inverse-edna .navbar-toggle .icon-bar {
+	background-color: #fff;
+}
+.navbar-inverse-edna .navbar-collapse,
+.navbar-inverse-edna .navbar-form {
+	border-color: #101010;
+}
+.navbar-inverse-edna .navbar-nav > .open > a,
+.navbar-inverse-edna .navbar-nav > .open > a:hover,
+.navbar-inverse-edna .navbar-nav > .open > a:focus {
+	color: #fff;
+	background-color: #080808;
+}
+@media (max-width: 767px) {
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .dropdown-header {
+		border-color: #080808;
+	}
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu .divider {
+		background-color: #080808;
+	}
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > li > a {
+		color: #9d9d9d;
+	}
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > li > a:hover,
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > li > a:focus {
+		color: #fff;
+		background-color: transparent;
+	}
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .active > a,
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .active > a:hover,
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .active > a:focus {
+		color: #fff;
+		background-color: #080808;
+	}
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .disabled > a,
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+	.navbar-inverse-edna .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+		color: #444;
+		background-color: transparent;
+	}
+}
+.navbar-inverse-edna .navbar-link {
+	color: #9d9d9d;
+}
+.navbar-inverse-edna .navbar-link:hover {
+	color: #fff;
+}
+.navbar-inverse-edna .btn-link {
+	color: #9d9d9d;
+}
+.navbar-inverse-edna .btn-link:hover,
+.navbar-inverse-edna .btn-link:focus {
+	color: #fff;
+}
+.navbar-inverse-edna .btn-link[disabled]:hover,
+fieldset[disabled] .navbar-inverse-edna .btn-link:hover,
+.navbar-inverse-edna .btn-link[disabled]:focus,
+fieldset[disabled] .navbar-inverse-edna .btn-link:focus {
+	color: #444;
 }
