--- a/public/modules/pictures/views/list-pictures.client.view.html
+++ b/public/modules/pictures/views/list-pictures.client.view.html
@@ -11,6 +11,8 @@
 				<span data-ng-bind="picture.user.displayName"></span>
 			</small>
 			<h4 class="list-group-item-heading" data-ng-bind="picture.name"></h4>
+            <h4 class="list-group-item-heading" data-ng-bind="picture.filename"></h4>
+            <h4 class="list-group-item-heading" data-ng-bind="picture.albumid"></h4>
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!pictures.$resolved || pictures.length">
