--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -17,7 +17,7 @@
 
 
 		<div class="row">
-			<tabset class="">
+			<tabset>
 				<tab ng-repeat="tab in tabs">
 					<tab-heading ng-class="{new:tab.new}">{{tab.name}}</tab-heading>
 					<div class="col-md-4" data-ng-repeat="album in albums | filter:tab._id">
