--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -15,7 +15,7 @@
 			</carousel>
 		</div>
 
-		<img ng-src="modules/photoalbums/me1.jpg" class="thumb-big">
+		<img ng-src="modules/photoalbums/landscape/DSC_0009.jpg" class="thumb-big">
 
 		<div class="row">
 			<tabset >
