--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -15,6 +15,8 @@
 			</carousel>
 		</div>
 
+		<img ng-src="modules/photoalbums/b&w/1015944_10203470307777571_1027528463_o.jpg" class="thumb-big">
+
 		<div class="row">
 			<tabset >
 				<tab ng-repeat="tab in tabs">
