--- a/public/modules/pictures/views/list-pictures.client.view.html
+++ b/public/modules/pictures/views/list-pictures.client.view.html
@@ -12,7 +12,7 @@
 			</small>
 			<h4 class="list-group-item-heading" data-ng-bind="picture.name"></h4>
             <h4 class="list-group-item-heading" data-ng-bind="picture.filename"></h4>
-            <h4 class="list-group-item-heading" data-ng-bind="picture.albumid"></h4>
+            <h4 class="list-group-item-heading" data-ng-bind="picture.album.name"></h4>
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!pictures.$resolved || pictures.length">
