--- a/public/modules/core/views/pictures.render.client.view.html
+++ b/public/modules/core/views/pictures.render.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="PictureRenderController">
     <ul>
         <li data-ng-repeat="picture in pictures | filter:albumid">
-            <p class="whiteDgray">{{picture.name}}</p>
+            <p class="whiteOnBlack">{{picture.name}}</p>
             <img data-ng-src="{{pathname + picture.filename}}" class="edna"><br><br>
         </li>
     </ul><br>
