Make the path dynamic base from the tables

--- a/public/modules/albums/views/list-albums.client.view.html
+++ b/public/modules/albums/views/list-albums.client.view.html
@@ -2,7 +2,7 @@
     <div class="page-header">
         <h1>Albums</h1>
     </div>
-    <div class="list-group">{{albums}}
+    <div class="list-group">
         <a data-ng-repeat="album in albums" data-ng-href="#!/albums/{{album._id}}" class="list-group-item">
 			<small class="list-group-item-text">
 				Posted on
