--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -23,7 +23,7 @@
 						<h2>
 							{{album.name}}
 						</h2>
-						<p><a href="/#!/pictures_render/{{album._id}}" class="thumb"><img ng-src="modules/core/img/slider/{{album.thumbnail}}.jpg" class="thumb-big"></a></p>
+						<p><a href="/#!/pictures_render/{{album._id}}/{{album.name}}/{{album.albumgroup.name}}" class="thumb"><img ng-src="modules/core/img/slider/{{album.thumbnail}}.jpg" class="thumb-big"></a></p>
 					</div>
 				</tab>
 
