--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -244,7 +244,7 @@ fieldset[disabled] .navbar-inverse-edna .btn-link:focus {
 	border-bottom-color: transparent;
 }
 
-IMG.displayed {
+.displayed {
 	display: block;
 	margin-left: auto;
 	margin-right: auto
