--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -3,9 +3,9 @@
 
 		<div class="whiteDgray" style="height: 550px">
 			<carousel interval="myInterval">
-				<slide ng-repeat="slide in slides" active="slide.active">
+				<slide ng-repeat="slide in slides | filter:'552b211d2f0a70b40f441b56'" active="slide.active">
 					<div class="item pCarouselImg">
-						<img class="pCarouselImg" data-ng-src="{{slide.image}}" style="margin:auto;">
+						<img class="pCarouselImg" data-ng-src="{{'modules/core/img/photoalbums/Portraits/Hers/' + slide.filename}}" style="margin:auto;">
 					</div>
 					<div class="carousel-caption">
 						<!--<h4>Slide {{$index}}</h4>-->
@@ -14,6 +14,8 @@
 				</slide>
 			</carousel>
 		</div>
+
+
 
 		<div class="row">
 			<tabset >
