--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -25,15 +25,15 @@
 			</li>
 		</ul>
 
-		<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
-			<li ui-route="/signup" ng-class="{active: $uiRoute}">
-				<a href="/#!/signup">Sign Up</a>
-			</li>
-			<li class="divider-vertical"></li>
-			<li ui-route="/secret-signin-admin" ng-class="{active: $uiRoute}">
-				<a href="/#!/secret-signin-admin">Sign In</a>
-			</li>
-		</ul>
+		<!--<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">-->
+			<!--<li ui-route="/signup" ng-class="{active: $uiRoute}">-->
+				<!--<a href="/#!/secret-signup-admin">Sign Up</a>up-->
+			<!--</li>-->
+			<!--<li class="divider-vertical"></li>-->
+			<!--<li ui-route="/secret-signin-admin" ng-class="{active: $uiRoute}">-->
+				<!--<a href="/#!/secret-signin-admin">Sign In</a>-->
+			<!--</li>-->
+		<!--</ul>-->
 
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 			<li class="dropdown">
