--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -25,6 +25,14 @@
 			</li>
 		</ul>
 
+
+		<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
+			<li ui-route="/about-me" ng-class="{active: $uiRoute}">
+				<a href="/#!/about-me">About Me</a>
+			</li>
+		</ul>
+
+		<!-- Hide these for now -->
 		<!--<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">-->
 			<!--<li ui-route="/signup" ng-class="{active: $uiRoute}">-->
 				<!--<a href="/#!/secret-signup-admin">Sign Up</a>up-->
@@ -35,28 +43,28 @@
 			<!--</li>-->
 		<!--</ul>-->
 
-		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
-				</a>
-				<ul class="dropdown-menu">
-					<li>
-						<a href="/#!/settings/profile">Edit Profile</a>
-					</li>
-					<li>
-						<a href="/#!/settings/accounts">Manage Social Accounts</a>
-					</li>
-					<li data-ng-show="authentication.user.provider === 'local'">
-						<a href="/#!/settings/password">Change Password</a>
-					</li>
-					<li class="divider"></li>
-					<li>
-						<a href="/auth/signout">Signout</a>
-					</li>
-				</ul>
+		<!--<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">-->
+			<!--<li class="dropdown">-->
+				<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+					<!--<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>-->
+				<!--</a>-->
+				<!--<ul class="dropdown-menu">-->
+					<!--<li>-->
+						<!--<a href="/#!/settings/profile">Edit Profile</a>-->
+					<!--</li>-->
+					<!--<li>-->
+						<!--<a href="/#!/settings/accounts">Manage Social Accounts</a>-->
+					<!--</li>-->
+					<!--<li data-ng-show="authentication.user.provider === 'local'">-->
+						<!--<a href="/#!/settings/password">Change Password</a>-->
+					<!--</li>-->
+					<!--<li class="divider"></li>-->
+					<!--<li>-->
+						<!--<a href="/auth/signout">Signout</a>-->
+					<!--</li>-->
+				<!--</ul>-->
+			<!--</li>-->
+		<!--</ul>-->
 
-			</li>
-		</ul>
 	</nav>
 </div>
