--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -249,3 +249,12 @@ fieldset[disabled] .navbar-inverse-edna .btn-link:focus {
 	margin-left: auto;
 	margin-right: auto
 }
+
+
+
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+	background-color: grey;
+}
+
+
