--- a/public/modules/albums/views/list-albums.client.view.html
+++ b/public/modules/albums/views/list-albums.client.view.html
@@ -2,20 +2,41 @@
     <div class="page-header">
         <h1>Albums</h1>
     </div>
-    <div class="list-group">
-        <a data-ng-repeat="album in albums" data-ng-href="#!/albums/{{album._id}}" class="list-group-item">
-			<small class="list-group-item-text">
-				Posted on
-				<span data-ng-bind="album.created | date:'medium'"></span>
-				by
-				<span data-ng-bind="album.user.displayName"></span>
-			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="album.name"></h4>
-            <h4 class="list-group-item-heading" data-ng-bind="album.thumbnail"></h4>
-            <h4 class="list-group-item-heading" data-ng-bind="album.albumgroup.name"></h4>
 
-        </a>
+    <div class="table-responsive">
+        <table st-table="displayed" st-safe-src="albums" class="table table-hover table-bordered">
+            <thead>
+            <tr>
+                <th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text"/></th>
+            </tr>
+            <tr>
+                <th st-sort="name">Name</th>
+                <th st-sort="thumbnail">Thumbnail</th>
+                <th st-sort="albumgroup.name">Album Group</th>
+                <th></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-ng-repeat="album in displayed">
+                <td>{{album.name}}</td>
+                <td>{{album.thumbnail}}</td>
+                <td>{{album.albumgroup.name}}</td>
+
+                <td><a class="btn btn-info btn-sm" href="/#!/albums/{{album._id}}/edit"><i class="glyphicon glyphicon-edit"></i></td></a>
+                <td><a class="btn btn-sm btn-danger" href="/#!/albums/{{album._id}}"><i class="glyphicon glyphicon-trash"></i></a></td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+                <td colspan="5" class="text-center">
+                    <div st-pagination="" st-items-by-page="10" st-displayed-pages="100"></div>
+                </td>
+            </tr>
+            </tfoot>
+        </table>
     </div>
+
     <div class="alert alert-warning text-center" data-ng-hide="!albums.$resolved || albums.length">
     	No Albums yet, why don't you <a href="/#!/albums/create">create one</a>?
     </div>
