--- a/public/modules/pictures/views/list-pictures.client.view.html
+++ b/public/modules/pictures/views/list-pictures.client.view.html
@@ -3,24 +3,18 @@
         <h1>Pictures</h1>
     </div>
 
-
-        <!--<button type="button" ng-click="addRandomItem(row)" class="btn btn-sm btn-success">-->
-            <!--<i class="glyphicon glyphicon-plus">-->
-            <!--</i> Add random item-->
-        <!--</button>-->
     <div class="table-responsive">
-        <table st-table="displayedCollection" st-safe-src="pictures" class="table table-hover table-bordered">
+        <table st-table="displayedPictures" st-safe-src="pictures" class="table table-hover table-bordered">
             <thead>
+            <tr>
+                <th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text"/></th>
+            </tr>
             <tr>
                 <th st-sort="name">Description</th>
                 <th st-sort="filename">Filename</th>
                 <th st-sort="album.name">Album</th>
                 <th></th>
                 <th></th>
-                <!--<th st-sort="balance">balance</th>-->
-            </tr>
-            <tr>
-                <th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text"/></th>
             </tr>
             </thead>
             <tbody>
@@ -28,20 +22,6 @@
                 <td>{{picture.name}}</td>
                 <td>{{picture.filename}}</td>
                 <td>{{picture.album.name}}</td>
-
-                <!--<td>-->
-                    <!--<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">-->
-                        <!--<i class="glyphicon glyphicon-trash">-->
-                        <!--</i>-->
-                    <!--</button>-->
-                <!--</td>-->
-                <!--<td class="list-group-item-text">-->
-                    <!--Posted on-->
-                    <!--<span data-ng-bind="picture.created | date:'medium'"></span>-->
-                    <!--by-->
-                    <!--<span data-ng-bind="picture.user.displayName"></span>-->
-                <!--</td>-->
-                <!--<td><a ng-href="#!/pictures/{{picture._id}}" class="btn-info btn-sm"><i class="glyphicon glyphicon-edit"></i></a></td>-->
 
                 <td><a class="btn btn-info btn-sm" href="/#!/pictures/{{picture._id}}/edit"><i class="glyphicon glyphicon-edit"></i></td></a>
                 <td><a class="btn btn-sm btn-danger" href="/#!/pictures/{{picture._id}}"><i class="glyphicon glyphicon-trash"></i></a></td>
@@ -54,25 +34,8 @@
                 </td>
             </tr>
             </tfoot>
-
-
         </table>
     </div>
-
-
-    <!--<div class="list-group">-->
-        <!--<a data-ng-repeat="picture in pictures" data-ng-href="#!/pictures/{{picture._id}}" class="list-group-item">-->
-			<!--<small class="list-group-item-text">-->
-				<!--Posted on-->
-				<!--<span data-ng-bind="picture.created | date:'medium'"></span>-->
-				<!--by-->
-				<!--<span data-ng-bind="picture.user.displayName"></span>-->
-			<!--</small>-->
-			<!--<h4 class="list-group-item-heading" data-ng-bind="picture.name"></h4>-->
-            <!--<h4 class="list-group-item-heading" data-ng-bind="picture.filename"></h4>-->
-            <!--<h4 class="list-group-item-heading" data-ng-bind="picture.album.name"></h4>-->
-        <!--</a>-->
-    <!--</div>-->
 
     <div class="alert alert-warning text-center" data-ng-hide="!pictures.$resolved || pictures.length">
     	No Pictures yet, why don't you <a href="/#!/pictures/create">create one</a>?
