--- a/public/modules/pictures/views/view-picture.client.view.html
+++ b/public/modules/pictures/views/view-picture.client.view.html
@@ -1,21 +1,9 @@
 <section data-ng-controller="PicturesController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1 data-ng-bind="picture.name"></h1>
+		<h1>Delete {{picture.name}}?</h1>
 	</div>
-	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == picture.user._id))">
-		<a class="btn btn-primary" href="/#!/pictures/{{picture._id}}/edit">
-			<i class="glyphicon glyphicon-edit"></i>
-		</a>
-		<a class="btn btn-primary" data-ng-click="remove();">
-			<i class="glyphicon glyphicon-trash"></i>
-		</a>
+	<div class="pull-left" data-ng-show="((authentication.user) && (authentication.user._id == picture.user._id))">
+		<a class="btn btn-primary" data-ng-click="remove();">Yes</a>
+		<a class="btn btn-primary" href="/#!/pictures">No</a>
 	</div>
-	<small>
-		<em class="text-muted">
-			Posted on
-			<span data-ng-bind="picture.created | date:'mediumDate'"></span>
-			by
-			<span data-ng-bind="picture.user.displayName"></span>
-		</em>
-	</small>
 </section>
