--- a/public/modules/pictures/views/list-pictures.client.view.html
+++ b/public/modules/pictures/views/list-pictures.client.view.html
@@ -11,8 +11,9 @@
             </tr>
             <tr>
                 <th st-sort="name">Description</th>
-                <th st-sort="filename">Filename</th>
+                <th st-sort="albumgroupName">Group</th>
                 <th st-sort="album.name">Album</th>
+                <th>Preview</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -20,8 +21,10 @@
             <tbody>
             <tr data-ng-repeat="picture in displayedPictures">
                 <td>{{picture.name}}</td>
-                <td>{{picture.filename}}</td>
-                <td>{{picture.album.name}}</td>
+                <!--<td>{{albumgroupName}}</td>-->
+                <!--<td>{{picture.album.name}}</td>-->
+                <td>{{picture.album}}</td>
+                <!--<td><img  src="modules/core/img/photoalbums/{{albumgroupName}}/{{picture.album.name}}/{{picture.filename}}" class="thumb-sm"/></td>-->
 
                 <td><a class="btn btn-info btn-sm" href="/#!/pictures/{{picture._id}}/edit"><i class="glyphicon glyphicon-edit"></i></td></a>
                 <td><a class="btn btn-sm btn-danger" href="/#!/pictures/{{picture._id}}"><i class="glyphicon glyphicon-trash"></i></a></td>
