--- a/public/modules/pictures/views/list-pictures.client.view.html
+++ b/public/modules/pictures/views/list-pictures.client.view.html
@@ -23,7 +23,7 @@
                 <td>{{picture.name}}</td>
                 <!--<td>{{albumgroupName}}</td>-->
                 <!--<td>{{picture.album.name}}</td>-->
-                <td>{{picture.album}}</td>
+                <td>{{initImg(picture.album.albumgroup)}}</td>
                 <!--<td><img  src="modules/core/img/photoalbums/{{albumgroupName}}/{{picture.album.name}}/{{picture.filename}}" class="thumb-sm"/></td>-->
 
                 <td><a class="btn btn-info btn-sm" href="/#!/pictures/{{picture._id}}/edit"><i class="glyphicon glyphicon-edit"></i></td></a>
