--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -170,16 +170,18 @@ fieldset[disabled] .navbar-inverse-edna .btn-link:focus {
 
 .nav-tabs {
 	border-bottom: 1px solid #ddd;
+
 }
 .nav-tabs > li {
 	float: left;
 	margin-bottom: -1px;
+
 }
 .nav-tabs > li > a {
 	margin-right: 2px;
 	line-height: 1.42857143;
 	border: 1px solid transparent;
-	border-radius: 4px 4px 0 0;
+	border-radius: 4px 4px 0 0;color: grey;
 }
 .nav-tabs > li > a:hover {
 	border-color: #eee #eee #ddd;
@@ -187,9 +189,9 @@ fieldset[disabled] .navbar-inverse-edna .btn-link:focus {
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-	color: darkgray;
+	color: black;
 	cursor: default;
-	background-color: #fff;
+	background-color: darkgrey;
 	border: 1px solid #ddd;
 	border-bottom-color: transparent;
 }
@@ -225,6 +227,7 @@ fieldset[disabled] .navbar-inverse-edna .btn-link:focus {
 .nav-tabs.nav-justified > .active > a:hover,
 .nav-tabs.nav-justified > .active > a:focus {
 	color: orange;
+	background-color: green;
 	border: 1px solid #ddd;
 }
 @media (min-width: 768px) {
