--- a/public/modules/app-setups/views/create-app-setup.client.view.html
+++ b/public/modules/app-setups/views/create-app-setup.client.view.html
@@ -5,10 +5,23 @@
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()" novalidate>
             <fieldset>
+
                 <div class="form-group">
                     <label class="control-label" for="name">Name</label>
                     <div class="controls">
                         <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="description">Description</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="description" id="description" class="form-control" placeholder="Description">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="value">Value</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="value" id="value" class="form-control" placeholder="Value" required>
                     </div>
                 </div>
                 <div class="form-group">
