--- a/public/modules/app-setups/views/edit-app-setup.client.view.html
+++ b/public/modules/app-setups/views/edit-app-setup.client.view.html
@@ -12,6 +12,18 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="control-label" for="description">Description</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="appSetup.description" id="description" class="form-control" placeholder="Description">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="value">Value</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="appSetup.value" id="value" class="form-control" placeholder="Value" required>
+                    </div>
+                </div>
+                <div class="form-group">
                     <input type="submit" value="Update" class="btn btn-default">
                 </div>
 				<div data-ng-show="error" class="text-danger">
